--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
+    "name": "twitf/payment",
+    "description": "payment",
+    "authors": [
+        {
+            "name": "twitf",
+            "email": "837422076@qq.com"
+        }
+    ],
     "require": {
         "guzzlehttp/guzzle": "~6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "twitf\\payment\\": ""
+        }
     }
 }
