--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "twitf\\payment\\": ""
+            "twitf\\Payment\\": "src"
         }
     }
 }
